<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Title"
            style="@style/Header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:layout_marginHorizontal="24dp"
            android:text="@string/register_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subTitle"
            android:layout_width="0dp"
            android:layout_height="19dp"
            android:layout_marginHorizontal="24dp"
            android:text="@string/register_subTitle"
            android:textColor="@color/light_grey"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Title" />

        <com.qds.MainEditText
            android:id="@+id/name"
            style="@style/MainEditTextPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="28dp"
            app:hint="@string/register_name_hint"
            app:label="@string/register_name_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subTitle"
            app:startIcon="@drawable/ic_name"
            />

        <com.qds.MainEditText
            android:id="@+id/email"
            style="@style/MainEditTextPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="20dp"
            app:hint="@string/register_email_hint"
            app:label="@string/register_email_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:startIcon="@drawable/ic_email" />

        <com.qds.MainEditText
            android:id="@+id/wpp"
            style="@style/MainEditTextPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="20dp"
            app:hint="@string/register_whatsapp_hint"
            app:label="@string/register_whatsapp_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:startIcon="@drawable/ic_wpp" />

        <com.qds.MainEditText
            android:id="@+id/apNumber"
            style="@style/MainEditTextPrimary"
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="28dp"
            app:hint="@string/register_apNumber_hint"
            app:label="@string/register_apNumber_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wpp" />

        <com.qds.MainEditText
            android:id="@+id/block"
            style="@style/MainEditTextPrimary"
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            app:hint="@string/register_block_hint"
            app:label="@string/register_block_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/apNumber"
            app:layout_constraintTop_toTopOf="@+id/apNumber" />

        <com.qds.MainButton
            android:id="@+id/advanceButton"
            style="@style/MainButtonPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="28dp"
            android:text="Avançar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/apNumber"
            />

        <com.qds.MainButton
            style="@style/MainButtonSecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:text="Já tenho minha conta"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/advanceButton"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>