<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/TitleLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_margin="24dp"
        android:text="@string/você_já_de_casa"
        android:textStyle="bold"
        android:textColor="@color/grey"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/subtitleLogin"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:text="@string/fique_vontade"
        android:textSize="16sp"
        android:textColor="@color/light_grey"
        app:layout_constraintTop_toBottomOf="@id/TitleLogin"
        app:layout_constraintStart_toStartOf="@id/TitleLogin"
        app:layout_constraintEnd_toEndOf="@id/TitleLogin"
        />

    <com.qds.MainEditText
        android:id="@+id/emailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:label="E-mail"
        app:hint="Digite seu e-mail"
        app:startIcon="@drawable/ic_email"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitleLogin"
        />

    <com.qds.MainEditText
        android:id="@+id/passwordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:label="Senha"
        app:hint="Digite sua senha"
        app:startIcon="@drawable/ic_password"
        app:layout_constraintTop_toBottomOf="@id/emailLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="20dp"
        />

    <com.qds.MainButton
        android:id="@+id/buttonEntrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="24dp"
        android:text="@string/entrar"
        android:textSize="18sp"
        style="@style/MainButtonBasic"
        app:enabledTextColor="@color/white"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:corner="68dp"
        app:layout_constraintTop_toBottomOf="@id/passwordLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.qds.MainButton
        android:id="@+id/buttonCriarConta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="24dp"
        android:text="@string/criar_minha_conta"
        android:textSize="18sp"
        app:enabledColor="@color/grey"
        app:enabledTextColor="@color/white"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:corner="68dp"
        app:layout_constraintTop_toBottomOf="@id/buttonEntrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>